.provarCaches/00D410000011HE0EAM/objects/rstk__soshipchg__c.object
<CustomObject>
    <description>soshipchg__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_Invoice__c</fullName>
        <formula>IF(ISBLANK(rstk__soshipchg_soship__r.rstk__soship_invoice__c),false, true)</formula>
        <label>Shipper Invoiced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__soshipchg_soship__r.rstk__externalid__c +&apos;_&apos;+ rstk__soshipchg_packageid__c</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>rstk__soshipchg_soship__r.Name +&apos;_&apos;+ rstk__soshipchg_packageid__c</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Name Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_usechargedtl__c</fullName>
        <formula>rstk__soshipchg_soship__r.rstk__soship_usechargedtl__c</formula>
        <label>Use Shipping Charge Detail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__soshipchg_carrier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Carrier</label>
        <referenceTo>rstk__sycarrier__c</referenceTo>
        <relationshipLabel>Shipping Charge Details</relationshipLabel>
        <relationshipName>soshipchgs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soshipchg_comment__c</fullName>
        <label>Comments</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__soshipchg_frtamt__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Freight Charge</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soshipchg_handamt__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Handling Charge</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soshipchg_height__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Height</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soshipchg_length__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Length</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soshipchg_packageamt__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Packaging Charge</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soshipchg_packageid__c</fullName>
        <label>Package ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__soshipchg_shipvia__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ship Method</label>
        <referenceTo>rstk__syshipviatype__c</referenceTo>
        <relationshipLabel>Shipping Charge Details</relationshipLabel>
        <relationshipName>soshipchgs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soshipchg_soship__c</fullName>
        <label>Shipper Number</label>
        <referenceTo>rstk__soship__c</referenceTo>
        <relationshipLabel>Shipping Charge Details</relationshipLabel>
        <relationshipName>soshipchgs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstk__soshipchg_tracking__c</fullName>
        <label>Tracking Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__soshipchg_weight__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Weight</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soshipchg_width__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Width</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Shipping Charge Detail</label>
    <listViews>
        <fullName>rstk__RS_Shipping_Charge_Details</fullName>
        <columns>rstk__externalid__c</columns>
        <columns>NAME</columns>
        <columns>rstk__soshipchg_soship__c</columns>
        <columns>rstk__soshipchg_packageid__c</columns>
        <columns>rstk__soshipchg_carrier__c</columns>
        <columns>rstk__soshipchg_tracking__c</columns>
        <columns>rstk__soshipchg_packageamt__c</columns>
        <columns>rstk__soshipchg_handamt__c</columns>
        <columns>rstk__soshipchg_frtamt__c</columns>
        <columns>rstk__soshipchg_shipvia__c</columns>
        <columns>rstk__formula_Invoice__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Shipping Charge Details</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Shipping Charge Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>rstk__Freight_Charge</fullName>
        <active>true</active>
        <description>Freight Charge cannot be less than zero.</description>
        <errorConditionFormula>rstk__soshipchg_frtamt__c &lt; 0</errorConditionFormula>
        <errorMessage>Freight Charge cannot be less than zero.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Handling_Charge</fullName>
        <active>true</active>
        <description>Handling Charge cannot be less than zero (0).</description>
        <errorConditionFormula>rstk__soshipchg_handamt__c &lt; 0</errorConditionFormula>
        <errorMessage>Handling Charge cannot be less than zero (0).</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Height</fullName>
        <active>true</active>
        <description>Height cannot be less than zero (0).</description>
        <errorConditionFormula>rstk__soshipchg_height__c &lt; 0</errorConditionFormula>
        <errorMessage>Height cannot be less than zero (0).</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Length</fullName>
        <active>true</active>
        <description>Length cannot be less than zero (0).</description>
        <errorConditionFormula>rstk__soshipchg_length__c  &lt; 0</errorConditionFormula>
        <errorMessage>Length cannot be less than zero (0).</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Package_ID</fullName>
        <active>true</active>
        <description>Package ID is Required and not Modifiable.</description>
        <errorConditionFormula>ISBLANK( rstk__soshipchg_packageid__c ) || (!ISNEW() &amp;&amp;  ISCHANGED(rstk__soshipchg_packageid__c ))</errorConditionFormula>
        <errorMessage>Package ID is Required and not Modifiable.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Packaging_Charge</fullName>
        <active>true</active>
        <description>Packaging Charge cannot be less than zero (0).</description>
        <errorConditionFormula>rstk__soshipchg_packageamt__c &lt; 0</errorConditionFormula>
        <errorMessage>Packaging Charge cannot be less than zero (0).</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Shipper_Number</fullName>
        <active>true</active>
        <description>Shipper Number is required and not Modifiable</description>
        <errorConditionFormula>ISBLANK( rstk__soshipchg_soship__c ) || ( !ISNEW() &amp;&amp;  ISCHANGED(rstk__soshipchg_soship__c ) )</errorConditionFormula>
        <errorMessage>Shipper Number is required and not Modifiable</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Weight</fullName>
        <active>true</active>
        <description>Weight Charge cannot be less than zero (0).</description>
        <errorConditionFormula>rstk__soshipchg_weight__c &lt; 0</errorConditionFormula>
        <errorMessage>Weight Charge cannot be less than zero (0).</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Width</fullName>
        <active>true</active>
        <description>Width cannot be less than zero (0).</description>
        <errorConditionFormula>rstk__soshipchg_width__c &lt; 0</errorConditionFormula>
        <errorMessage>Width cannot be less than zero (0).</errorMessage>
    </validationRules>
</CustomObject>